src/assets/style/pages/dashboard.css
section#dashboard {
	width: 80%;
	margin: 50px auto;
	position: relative;
}
section#dashboard h1 {
	font-size: 50px;
}
section#project-list {
	display: grid;
	grid-template-columns: repeat(auto-fit, minmax(35rem, 1fr));
	gap: 20px;
	margin-top: 30px;
}
section#project-list div.project {
	border: 2px solid rgb(215, 215, 215);
	padding: 20px 30px 30px 30px;
	border-radius: 5px;
}
section#project-list div.project h2 {
	font-size: 30px;
}
section#project-list div.project h3 {
	font-size: 20px;
	color: #545454;
}
section#project-list div.project p {
	font-size: 15px;
	color: grey;
	margin: 30px 0 20px 0;
}
section#project-list div.project a {
	background: orange;
	font-size: 20px;
	color: white;
	padding: 10px 20px;
	border-radius: 5px;
}

